k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcore-admin
  namespace: dev-memcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcore-admin
  template:
    metadata:
      labels:
        app: memcore-admin
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: memcore-admin
          image: 172.236.254.239:30880/memcore-admin/frontend:dev-4e89722
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
